--- a/goalik/assets/styles/layout.styl
+++ b/goalik/assets/styles/layout.styl
@@ -22,7 +22,7 @@
     width 25%
     border 1px solid rgba(0, 0, 0, 0.15)
     border-radius .75rem
-    margin 1rem
+    margin .5rem 1rem
   &__left-side
     padding 1rem
     width 75%
