--- a/goalik/assets/mdc.scss
+++ b/goalik/assets/mdc.scss
@@ -7,6 +7,7 @@ $mdc-theme-background: #fff;
 .mdc-top-app-bar__title {
   color: white;
   text-shadow: 1px 1px 2px #818181;
+  font-size: 1rem;
 }
 
 .mdc-tab-scroller--align-end,
