[GOALIK ] update page news 500

--- a/goalik/assets/styles/layout.styl
+++ b/goalik/assets/styles/layout.styl
@@ -101,6 +101,9 @@
     &__container
       margin 0
       border-radius .35rem
+  .b_title__main
+    .b_text__right
+      float none
 
   .page-layout
     padding 4rem 2rem 2rem
