--- a/goalik/assets/mat.scss
+++ b/goalik/assets/mat.scss
@@ -89,3 +89,10 @@ $my-theme-warn: mat-palette($mat-red);
 $my-theme: mat-light-theme($my-theme-primary, $my-theme-accent, $my-theme-warn);
 
 @include angular-material-theme($my-theme);
+
+.mat-card-header-text {
+        margin: 0 !important;
+        h1 {
+                font-weight: 400;
+        }
+}
