--- a/goalik/assets/styles/layout.styl
+++ b/goalik/assets/styles/layout.styl
@@ -1,38 +1,47 @@
 @import "./vars.styl";
 
-
 .content__headline
   display flex
 
 .b-layout
   &__container
-    border 1px solid rgba(0, 0, 0, 0.15)
-    border-radius .55rem
-    margin 1em
+    border-radius .5rem
+    margin 1rem 2rem
+    &--box
+      border 1px solid #009d00
+      border-radius 6px
+
 .page-layout
   padding 0 2rem
+  &__base
+    position relative
+    padding-top 6rem
   &__header
     border-radius: .5rem;
-    border 1px solid rgb(0, 159, 0)
-    padding-left: 2rem;
-    text-align: center;
     display: flex;
-    margin: 0 1rem;
+    margin: 0 2rem;
     //box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12)
+    h2
+      font-weight: 400;
+      font-size 1.5rem
+      color: green
+      text-decoration: underline;
   &__container
     display flex
     padding 0 0 0 1rem
+
   &__right-side
     width 25%
-    border 1px solid rgb(0, 159, 0)
-    border-radius .75rem
-    margin 1rem
+    border-radius .5rem
+    padding-top 7.8rem
+    &__up
+      padding-top 0
+    &__calendar
+      padding-top 6rem
   &__left-side
     padding 1rem
     width 75%
-    border 1px solid rgb(0, 159, 0)
-    border-radius .75rem
-    margin 1rem 0
+    border-radius .5rem
     &.sector-clear
       border none
       margin 0
@@ -44,10 +53,14 @@
     color white
     background #009200
     &--top
-      border-top-left-radius 0.75rem
-      border-top-right-radius 0.75rem
+      border-top-left-radius 0.5rem
+      border-top-right-radius 0.5rem
+      margin-bottom: -2px;
+      z-index: 1;
+      position: absolute;
+      width: inherit;
   &__content
-    padding 1rem
+    padding-top 2.4rem
 
 .b-item-inline
   font-size 1.4rem
@@ -82,12 +95,24 @@
   line-height: 1.425;
 }
 
+.text_size_middle
+  font-size 1.5rem
+
+.btn-outline__white
+  color #e2e2e2 !important
+  border-color #009d00 !important
+
+.demo-layout__row
+  position: relative
+  width 100%
+
+.b-container__description
+  padding-top 2rem
 
 @media (max-width 800px)
   .page-layout
     &__header
       text-align left
-      padding-left 0
       h2
         font-size 1.7rem
     &__left-side
@@ -106,9 +131,6 @@
     &__container
       margin 0
       border-radius .35rem
-  .b_title__main
-    .b_text__right
-      float none
 
   .page-layout
     padding 4rem 2rem 2rem
