--- a/goalik/assets/mdc.scss
+++ b/goalik/assets/mdc.scss
@@ -256,12 +256,29 @@ $mdc-theme-background: #fff;
 .mdc-tab-scroller__scroll-area {
   z-index: 10;
   width: 100%;
-  position: fixed;
-  top: 48px;
+  position: relative;
+  margin-top: 48px;
   left: 0;
   background: white;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
+
+.sub-menu__bar--tabs {
+  .mdc-tab-scroller__scroll-area {
+    position: relative;
+    z-index: 0;
+    top: 0;
+    box-shadow: none;
+    border-bottom: 1px solid #e4e4e4;
+    .mdc-tab {
+      display: block;
+      flex: none;
+    }
+  }
+}
+
+
+
 
 .mdc-tab-scroller__scroll-content {
   max-width: 1080px;
@@ -269,7 +286,7 @@ $mdc-theme-background: #fff;
 }
 
 .mdc-top-app-bar__section {
-  padding: 0 1rem;
+  padding: 0 1rem !important;
 }
 
 .mdc-top-app-bar__row {
